creusot/tests/should_fail/prusti/blocked_lifetime/invariant2.stderr
error[creusot]: invalid dereference of expression with home `'old` and lifetime `'a` at time-slice `'curr`
 --> invariant2.rs:5:12
  |
5 | #[ensures(*x == 0u32)]
  |            ^

error: aborting due to previous error

